NDS-94 Nest image into styled container

--- a/components/nds-card/scss/card.scss
+++ b/components/nds-card/scss/card.scss
@@ -81,8 +81,11 @@
   }
 
   &__image {
-    display: block;
-    margin: rem(0 0 $nds-spacing-x-small);
+    img {
+      width: 100%;
+      display: block;
+      margin: rem(0 0 $nds-spacing-x-small);
+    }
   }
 
   &__icon {
