NDS-94 Add Card summary and image (#107)
* NDS-94 Add Card summary and image

* NDS-94 Allow full image element to card image

* NDS-94 Add required class to nested image

* NDS-94 Nest image into styled container

--- a/components/nds-card/scss/card.scss
+++ b/components/nds-card/scss/card.scss
@@ -75,16 +75,17 @@
   }
 
   &__summary {
-    margin: rem(0 0 $nds-spacing-small 0);
-
     a {
       position: relative;
     }
   }
 
   &__image {
-    display: block;
-    margin: rem(0 0 $nds-spacing-x-small);
+    img {
+      width: 100%;
+      display: block;
+      margin: rem(0 0 $nds-spacing-x-small);
+    }
   }
 
   &__icon {
