NDS-124 Add storybook and npm frontmatter

--- a/packages/docs/src/styles/main.scss
+++ b/packages/docs/src/styles/main.scss
@@ -1,2 +1,7 @@
 @import '~@nice-digital/design-system/scss/nice-design-system.scss';
 @import 'utils';
+
+.permalink-icon svg {
+  height: 1.5rem;
+  margin-right: 0.25rem;
+}
