--- a/components/nds-horizontal-nav/scss/horizontal-nav.scss
+++ b/components/nds-horizontal-nav/scss/horizontal-nav.scss
@@ -7,5 +7,32 @@
 @import '~@nice-digital/nds-core/scss/core';
 
 .horizontal-nav {
-  background: green;
+  &__list {
+    border-bottom: rem(3) solid $nds-colour-nice-black;
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    margin: 0;
+    max-width: 100%;
+  }
+  &__item {
+    margin: 0 rem($nds-spacing-small);
+    text-align: center;
+    &:first-of-type {
+      margin-left: 0;
+    }
+    &:last-of-type {
+      margin-right: 0;
+    }
+  }
+  &__link {
+    display: block;
+    padding: rem($nds-spacing-small) rem($nds-spacing-medium);
+    &[aria-current='true'] {
+      border-bottom: rem(6) solid $nds-colour-nice-black;
+      color: $nds-colour-nice-black;
+      font-weight: bold;
+      text-decoration: none;
+    }
+  }
 }
