--- a/components/design-system/scss/nice-design-system.scss
+++ b/components/design-system/scss/nice-design-system.scss
@@ -23,4 +23,5 @@
   '~@nice-digital/nds-simple-pagination/scss/simple-pagination',
   '~@nice-digital/nds-stacked-nav/scss/stacked-nav',
   '~@nice-digital/nds-tabs/scss/tabs', '~@nice-digital/nds-tag/scss/tag',
-  '~@nice-digital/nds-textarea/scss/textarea';
+  '~@nice-digital/nds-textarea/scss/textarea',
+  '~@nice-digital/nds-prev-next/scss/prev-next';
