NDS-127 Prev & Next Component (#129)
* NDS-124 Add storybook and npm frontmatter

* NDS-127 Prev / Next first use

* NDS-127 Prev next - initial

* NDS-127 Prev Next storybook

* NDS-127 Update prev-next readme

* Update package.json

* NDS-127 CR amends

* Update nice-design-system.scss

* NDS-127 Made text prop required

--- a/components/design-system/scss/nice-design-system.scss
+++ b/components/design-system/scss/nice-design-system.scss
@@ -24,4 +24,5 @@
   '~@nice-digital/nds-stacked-nav/scss/stacked-nav',
   '~@nice-digital/nds-tabs/scss/tabs', '~@nice-digital/nds-tag/scss/tag',
   '~@nice-digital/nds-textarea/scss/textarea',
+  '~@nice-digital/nds-prev-next/scss/prev-next',
   '~@nice-digital/nds-horizontal-nav/scss/horizontal-nav';
