--- a/packages/docs/src/styles/main.scss
+++ b/packages/docs/src/styles/main.scss
@@ -2,6 +2,7 @@
 @import '~@nice-digital/design-system/scss/nice-design-system.scss';
 @import 'utils';
 
+// Styling for the github-style permalink header links
 .permalink-icon svg {
   height: 1.5rem;
   margin-right: 0.25rem;
