--- a/components/nds-core/scss/settings/_settings-colours-semantic.scss
+++ b/components/nds-core/scss/settings/_settings-colours-semantic.scss
@@ -196,7 +196,7 @@ $nds-colour-error-background: #eac3c3;
 
 /// Caution text and border colour
 /// @since 0.2.0
-$colour-caution: #835f24;
+$nds-colour-caution: #835f24;
 
 /// Caution background colour
 /// @since 0.2.0
