--- a/components/design-system/scss/nice-design-system.scss
+++ b/components/design-system/scss/nice-design-system.scss
@@ -26,4 +26,5 @@
   '~@nice-digital/nds-textarea/scss/textarea',
   '~@nice-digital/nds-prev-next/scss/prev-next',
   '~@nice-digital/nds-table/scss/table',
-  '~@nice-digital/nds-horizontal-nav/scss/horizontal-nav';
+  '~@nice-digital/nds-horizontal-nav/scss/horizontal-nav',
+  '~@nice-digital/nds-callout/scss/callout';
