--- a/components/nds-tabs/scss/tabs.scss
+++ b/components/nds-tabs/scss/tabs.scss
@@ -50,6 +50,7 @@
     display: none;
     list-style: none;
     margin: 0;
+    max-width: 100%;
     padding: 0;
     position: relative;
     top: 1px; // To cover the border around the tabs content
