--- a/components/nds-callout/scss/callout.scss
+++ b/components/nds-callout/scss/callout.scss
@@ -5,4 +5,34 @@
 @import '~@nice-digital/nds-core/scss/core';
 
 .callout {
+  background: $nds-colour-nice-white;
+  height: auto;
+  margin-bottom: rem($nds-spacing-large);
+  &__image {
+    width: 100%;
+  }
+  &__body {
+    padding: 1rem;
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      margin-top: 0;
+    }
+    a {
+      text-decoration: none;
+      &:before {
+        content: '';
+        display: block;
+        height: 100%;
+        left: 0;
+        position: absolute;
+        top: 0;
+        width: 100%;
+        z-index: 0;
+      }
+    }
+  }
 }
