NDS-138 Callout component

--- a/components/nds-callout/scss/callout.scss
+++ b/components/nds-callout/scss/callout.scss
@@ -8,7 +8,7 @@
   background: $nds-colour-nice-white;
   height: auto;
   margin-bottom: rem($nds-spacing-large);
-  &__image {
+  &__image img {
     width: 100%;
   }
   &__body {
