Set max width none for grid and unstyled lists
Fixes #151

--- a/components/design-system/scss/typography/_typography-lists.scss
+++ b/components/design-system/scss/typography/_typography-lists.scss
@@ -23,6 +23,7 @@ ol {
 .list--unstyled {
   list-style: none;
   margin-left: 0;
+  max-width: none; // To override max-width of 66ch set on lists
   padding: 0;
 }
 
