--- a/components/nds-page-header/scss/page-header.scss
+++ b/components/nds-page-header/scss/page-header.scss
@@ -41,6 +41,42 @@
     margin: rem(0 0 $nds-spacing-small 0);
   }
 
+  &__metadata {
+    @include nds-font-size(lead);
+    list-style: none;
+    margin: rem(0 0 $nds-spacing-small 0);
+    max-width: none;
+    padding: 0;
+
+    li {
+      display: block;
+
+      @include mq($from: md) {
+        display: inline-block;
+        white-space: nowrap;
+
+        &:after {
+          border-left: 1px solid $nds-colour-icons;
+          content: nds-get-glyph(zero-width-space);
+          display: inline-block;
+          margin: em(0 $nds-spacing-small);
+          overflow: hidden;
+          text-indent: -99px;
+          vertical-align: middle;
+          width: 0;
+        }
+
+        &:first-child {
+          padding-left: 0;
+        }
+
+        &:last-child:after {
+          display: none;
+        }
+      }
+    }
+  }
+
   &__cta {
     @include nds-hide-print;
     @include nds-font-size(p);
