--- a/components/design-system/scss/nice-design-system.scss
+++ b/components/design-system/scss/nice-design-system.scss
@@ -27,4 +27,5 @@
   '~@nice-digital/nds-prev-next/scss/prev-next',
   '~@nice-digital/nds-table/scss/table',
   '~@nice-digital/nds-horizontal-nav/scss/horizontal-nav',
-  '~@nice-digital/nds-callout/scss/callout';
+  '~@nice-digital/nds-callout/scss/callout',
+  '~@nice-digital/nds-full-bleed/scss/full-bleed';
