NDS-144 Hide prev-next and horiz-nav on print

--- a/components/nds-prev-next/scss/prev-next.scss
+++ b/components/nds-prev-next/scss/prev-next.scss
@@ -1,6 +1,7 @@
 @import '~@nice-digital/nds-core/scss/core';
 
 .prev-next {
+  @include nds-hide-print;
   &__link {
     display: block;
     margin-bottom: 1rem;
