--- a/components/nds-horizontal-nav/scss/horizontal-nav.scss
+++ b/components/nds-horizontal-nav/scss/horizontal-nav.scss
@@ -7,6 +7,7 @@
 @import '~@nice-digital/nds-core/scss/core';
 
 .horizontal-nav {
+  @include nds-hide-print;
   margin-bottom: rem($nds-spacing-large);
   &__list {
     align-items: stretch;
