Flexbox based grid, grid item usage warnings, page header metadata and sticky in-page nav (#159)
* Initial flexbox grid implementation

* Get dev app working in IE11

* Update readme for v1 upgrade steps for grid

* Add equal heights and defensive grid warnings

* Add pageview metadata

* Add sticky style to in page nav

* Remove bottom margin from grid

* Fix comments

* Publish

 - @nice-digital/design-system@1.2.0-alpha.0
 - @nice-digital/nds-callout@1.1.0-alpha.0
 - @nice-digital/nds-grid@1.2.0-alpha.0
 - @nice-digital/nds-horizontal-nav@1.1.0-alpha.0
 - @nice-digital/nds-in-page-nav@1.2.0-alpha.0
 - @nice-digital/nds-page-header@1.2.0-alpha.0
 - dev-app@1.1.0-alpha.0
 - @nice-digital/design-system-documentation@1.2.0-alpha.0
 - storybook@1.2.0-alpha.0

* Fix prop type

* Add more complex page header metadata example

* Change page header metadata to flexbox

Removes spaces from inline block

* Publish

 - @nice-digital/design-system@1.2.0-alpha.1
 - @nice-digital/nds-page-header@1.2.0-alpha.1
 - dev-app@1.1.0-alpha.1
 - @nice-digital/design-system-documentation@1.2.0-alpha.1
 - storybook@1.2.0-alpha.1

* Remove x overflow

Was stopping us from using position sticky
See #167

* Change default column count to 12

Fixes #98

* Fix grid items not always being the correct width

Due to flex basis not behaving exactly the same as width

* Publish

 - @nice-digital/design-system@1.2.0-alpha.2
 - @nice-digital/nds-grid@1.2.0-alpha.1
 - dev-app@1.1.0-alpha.2
 - @nice-digital/design-system-documentation@1.2.0-alpha.2
 - storybook@1.2.0-alpha.2

* Remove max width from piped lists

* Update nhsevidence to nice-digital

Fixes #170

--- a/components/nds-page-header/scss/page-header.scss
+++ b/components/nds-page-header/scss/page-header.scss
@@ -41,6 +41,38 @@
     margin: rem(0 0 $nds-spacing-small 0);
   }
 
+  &__metadata {
+    @include nds-font-size(lead);
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    margin: rem(0 0 $nds-spacing-small 0);
+    max-width: none;
+    padding: 0;
+
+    @include mq($from: md) {
+      flex-direction: row;
+      flex-wrap: wrap;
+
+      li {
+        display: flex;
+        flex-direction: row;
+        white-space: nowrap;
+
+        &:after {
+          background: $nds-colour-icons;
+          content: nds-get-glyph(zero-width-space);
+          margin: em(0 $nds-spacing-small);
+          width: 1px;
+        }
+
+        &:last-child:after {
+          display: none;
+        }
+      }
+    }
+  }
+
   &__cta {
     @include nds-hide-print;
     @include nds-font-size(p);
