Grid types and full modifier

--- a/components/design-system/scss/base.scss
+++ b/components/design-system/scss/base.scss
@@ -6,4 +6,4 @@
 // Import all the core variables, functions and mixins
 @import '~@nice-digital/nds-core/scss/core';
 
-@import 'helpers/helpers', 'layout/layout', 'typography/typography';
+@import 'helpers/helpers', 'typography/typography';
