--- a/components/nds-core/scss/layout/_layout-container.scss
+++ b/components/nds-core/scss/layout/_layout-container.scss
@@ -7,6 +7,6 @@
 @mixin nds-container {
   margin: auto;
   max-width: rem($nds-container-max-width);
-  width: 96%; // Fallback for non-calc browsers e.g. IE8, see https://caniuse.com/#feat=calc
+  width: 96%; // IE11 support for calc not consistent https://caniuse.com/calc (See "Known issues")
   width: calc(100% - #{rem($nds-container-gutter * 2)});
 }
