--- a/components/nds-panel/scss/panel.scss
+++ b/components/nds-panel/scss/panel.scss
@@ -70,11 +70,15 @@ $nds-colour-panel-primary-border: $nds-colour-nice-ice-teal;
 }
 
 .panel--inverse {
+  @include nds-links-inverse;
+  @include nds-inverse-focus-style;
   background: $nds-colour-nice-teal;
   color: $nds-colour-text-inverse;
 }
 
 .panel--impact-alt {
+  @include nds-links-inverse;
+  @include nds-inverse-focus-style;
   background: $nds-colour-nice-teal;
   background: linear-gradient(
     333deg,
