--- a/components/nds-table/scss/table.scss
+++ b/components/nds-table/scss/table.scss
@@ -6,60 +6,66 @@
 
 @import '~@nice-digital/nds-core/scss/core';
 
+$nds-colour-table-heading: $nds-colour-true-white;
+$nds-colour-table-row-odd: $nds-colour-body;
+$nds-colour-table-row-even: $nds-colour-nice-grey-3;
+
 table,
 .table {
-  background: $nds-colour-true-white;
-  border: 1px solid $nds-colour-border;
   border-collapse: collapse;
+  display: block; // Allows table to scroll horizontally in tandem with overflow-x
   margin: rem(0 0 $nds-spacing-medium);
-  max-width: 100%;
+  max-width: none;
   overflow-x: auto;
   overflow-y: hidden;
   width: 100% !important;
 
-  th {
-    vertical-align: bottom;
+  thead,
+  tbody,
+  tr {
+    // No need to have directional borders because of border-collapse
+    border: 1px solid $nds-colour-border;
   }
 
-  td {
-    vertical-align: top;
+  thead tr,
+  // Cater for tables without a thead/tbody - assume the first row is the heading row
+  > tr:first-child {
+    background: $nds-colour-table-heading;
+  }
+
+  tr {
+    background: $nds-colour-table-row-odd;
+
+    &:nth-child(even) {
+      // Zebra stripes
+      background-color: $nds-colour-table-row-even;
+    }
   }
 
   td,
   th {
-    border: 1px solid $nds-colour-border;
+    // Only left/right border as vertical borders are handled by tr
+    border-left: 1px solid $nds-colour-border;
+    border-right: 1px solid $nds-colour-border;
     padding: rem($nds-spacing-small);
     text-align: left;
+    vertical-align: top;
 
-    &:first-child {
-      border-left: 0;
-    }
-
-    &:last-child {
-      border-right: 0;
-    }
-
-    p {
+    > :first-child {
       margin-top: 0;
     }
-  }
 
-  thead,
-  :not(thead) + tbody,
-  tbody {
-    tr:first-child th {
-      border-top: 0;
+    > :last-child {
+      margin-bottom: 0;
     }
   }
 
-  tbody {
-    tr {
-      &:last-child td {
-        border-bottom: 0;
-      }
-      &:nth-child(even) > td {
-        background-color: $nds-colour-nice-grey-3;
-      }
-    }
+  th {
+    background: $nds-colour-table-heading;
+    vertical-align: bottom;
+  }
+
+  tbody th {
+    vertical-align: top;
   }
 }
